feat: restructure HTML layout and update CSS styles for improved design

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,8 @@
 <div class="container">
-  <h1 [style.color]="headingColor()">Hello World</h1>
-  <button (click)="changeColor()">Change Color</button>
+  <div class="card">
+    <h1 [style.color]="headingColor()">Hello World</h1>
+    <button (click)="changeColor()">Change Color</button>
+    <img src="gunter.svg" alt="Gunter" class="gunter-img">
+  </div>
 </div>
 
