--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
   <div class="card">
     <h1 [style.color]="headingColor()">Hello Gunter</h1>
     <button (click)="changeColor()">Change Color</button>
-    <img src="gunter.svg" alt="Gunter" class="gunter-img">
+    <img src="Gunter.gif" alt="Gunter" class="gunter-img">
   </div>
 </div>
 
