--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="card">
-    <h1 [style.color]="headingColor()">Hello Gunter</h1>
+    <h1 [style.color]="headingColor()">Hello Gunter 1</h1>
     <button (click)="changeColor()">Change Color</button>
     <img src="Gunter.gif" alt="Gunter" class="gunter-img">
   </div>
